fix(ui): Update bg color for the tab components (#21976)
* remove extra space visible in glossary term

* revert PR

* fix bg color issue

* update container styles

* updated bg color

* update heights

--- a/openmetadata-ui/src/main/resources/ui/src/components/Database/SampleDataTable/sample-data-table.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Database/SampleDataTable/sample-data-table.less
@@ -18,4 +18,5 @@
   border: 1px solid @border-color;
   border-radius: @border-radius-sm;
   padding: @size-3xl 0px;
+  background-color: @white;
 }
